# WebFrameworkCMakeProjectTemplate

./: .gitignore  README.md  cookiecutter.json
src/: {{ cookiecutter.executor_name }}.cpp
{{ cookiecutter.project_name }}/: CMakeLists.txt
{{ cookiecutter.project_name }}/include/: {{ cookiecutter.executor_name }}.h
